feature:background image

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,4 +1,4 @@
-$light_bg: rgb(227, 240, 240);
+$light_bg: rgba(227, 240, 240, 0.856);
 $light: rgb(245, 242, 242);
 
 $text_default: rgb(82, 82, 82);
