--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -41,3 +41,6 @@ html {
 @import './components/CharacterPreview.scss';
 @import './components/PageChanger.scss';
 
+//  animations
+@import './animations/index.scss';
+
